--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-/* @import-normalize; bring in normalize.css styles */
+/* @import-normalize; */
+/* bring in normalize.css styles */
 
 body {
   margin: 0;
@@ -7,11 +8,37 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color: teal; */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-/* git remote add origin https: //github.com/Ivan-T0/goit-react-hw-06-phonebook.git
-git branch -M main git push -u origin main */
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
